Hundreds of warnings fixes / dozens of findbugs fixes