@@ -20,6 +20,7 @@ import nu.xom.Element;
  * 
  */
 /*$Id: EventImpl.java,v 1.9 2004/10/06 16:00:11 ivanrise Exp $*/
+@SuppressWarnings("rawtypes")
 public class EventImpl implements Event, Comparable {
     
     private Element _elem = null;
@@ -36,7 +37,7 @@ public class EventImpl implements Event, Comparable {
      * @see net.sf.memoranda.Event#getHour()
      */
     public int getHour() {
-        return new Integer(_elem.getAttribute("hour").getValue()).intValue();
+        return Integer.valueOf(_elem.getAttribute("hour").getValue()).intValue();
     }
 
     /**
