@@ -23,7 +23,7 @@ import nu.xom.Node;
  *
  */
 /*$Id: TaskImpl.java,v 1.15 2005/12/01 08:12:26 alexeya Exp $*/
-public class TaskImpl implements Task, Comparable {
+public class TaskImpl implements Task, Comparable<Object> {
 
     private Element _element = null;
     private TaskList _tl = null;
@@ -50,7 +50,7 @@ public class TaskImpl implements Task, Comparable {
 
     public CalendarDate getEndDate() {
 		String ed = _element.getAttribute("endDate").getValue();
-		if (ed != "")
+		if (!ed.equals(""))
 			return new CalendarDate(_element.getAttribute("endDate").getValue());
 		Task parent = this.getParentTask();
 		if (parent != null)
@@ -63,8 +63,10 @@ public class TaskImpl implements Task, Comparable {
     }
 
     public void setEndDate(CalendarDate date) {
-		if (date == null)
+		if (date == null) {
 			setAttr("endDate", "");
+		}
+		
 		setAttr("endDate", date.toString());
     }
 
@@ -225,8 +227,8 @@ public class TaskImpl implements Task, Comparable {
     /**
      * @see net.sf.memoranda.Task#getDependsFrom()
      */
-    public Collection getDependsFrom() {
-        Vector v = new Vector();
+    public Collection<Task> getDependsFrom() {
+        Vector<Task> v = new Vector<Task>();
         Elements deps = _element.getChildElements("dependsFrom");
         for (int i = 0; i < deps.size(); i++) {
             String id = deps.get(i).getAttribute("idRef").getValue();
@@ -277,7 +279,7 @@ public class TaskImpl implements Task, Comparable {
         Attribute pa = _element.getAttribute("priority");
         if (pa == null)
             return Task.PRIORITY_NORMAL;
-        return new Integer(pa.getValue()).intValue();
+        return Integer.valueOf(pa.getValue()).intValue();
     }
     /**
      * @see net.sf.memoranda.Task#setPriority(int)
@@ -347,17 +349,22 @@ public class TaskImpl implements Task, Comparable {
 	 public boolean equals(Object o) {
 	     return ((o instanceof Task) && (((Task)o).getID().equals(this.getID())));
 	 }
-
+	 
+	 public int hashCode() {
+	    	int result = (int) (Math.random() * 42000);
+	    	return result;
+	 }
+	 
 	/* 
 	 * @see net.sf.memoranda.Task#getSubTasks()
 	 */
-	public Collection getSubTasks() {
+	public Collection<Task> getSubTasks() {
 		Elements subTasks = _element.getChildElements("task");
             return convertToTaskObjects(subTasks);
 	}
 
-	private Collection convertToTaskObjects(Elements tasks) {
-        Vector v = new Vector();
+	private Collection<Task> convertToTaskObjects(Elements tasks) {
+        Vector<Task> v = new Vector<Task>();
         for (int i = 0; i < tasks.size(); i++) {
             Task t = new TaskImpl(tasks.get(i), _tl);
             v.add(t);
