@@ -3,7 +3,6 @@ package net.sf.memoranda.util;
 import java.text.DateFormat;
 import java.util.Calendar;
 import java.util.Date;
-import java.util.Hashtable;
 import java.util.Locale;
 import java.io.*;
 
@@ -25,7 +24,7 @@ public class Local {
     	if (!Configuration.get("DISABLE_L10N").equals("yes")) {
 	    	setMessages(currentLocale.getLanguage());
 	    	
-	        if (Configuration.get("LOCALES_DIR") != "") {
+	        if (!(Configuration.get("LOCALES_DIR")).equals("")) {
 	        	System.out.print("Look "+fn+" at: "+Configuration.get("LOCALES_DIR")+" ");
 	        	try {
 	        		fn = "messages_"
@@ -87,7 +86,7 @@ public class Local {
         /**********************/
     }
 
-    public static Hashtable getMessages() {
+    public static LoadableProperties getMessages() {
         return messages;
     }
     
@@ -277,7 +276,7 @@ public class Local {
         }
         int[] time = new int[2];
         try {
-            time[0] = new Integer(h).intValue();
+            time[0] = Integer.valueOf(h).intValue();
             if ((time[0] < 0) || (time[0] > 23)) {
                 time[0] = 0;
             }
@@ -307,7 +306,6 @@ public class Local {
         throw new IllegalArgumentException("No language found: " + name);
     }
 
-    @SuppressWarnings("unchecked")
     public static void put(String key, Object value) {
         messages.put(key, value);
       }
